@@ -28,6 +28,10 @@ software-center (2.1.10) UNRELEASED; urgency=low
   * softwarecenter/view/pendingview.py:
     - display the name of the application holding the lock, when waiting for
       a package manager to quit (LP: #440058, #511213)
+  
+  [ Michael Vogt ]
+  * softwarecenter/view/appdetailsview_gtk.py:
+    - fix crash when icon can not be loaded
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Aug 2010 23:19:03 +0200
 
